<resources>
    <string name="app_id" translatable="false">611128796015197</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb611128796015197</string>
    <string name="google_map" translatable="false">AIzaSyAQs3a7h5CmiGZSDA3aTHjCUUR_71CBCbs</string>
    <string name="default_notification_channel_id">clickat_notification</string>
    <string name="packages">Packages</string>
    <string name="welcome">Welcome</string>
    <string name="recomended">Recommended</string>
    <string name="offers">Offers</string>
    <string name="start">Start Service</string>
    <string name="end_service">End service</string>
    <string name="home">Home</string>
    <string name="live_support">Live Support</string>
    <string name="cart">Cart</string>
    <string name="promotions">Promotions</string>
    <string name="notifications">Notifications</string>
    <string name="my_account">My Account</string>
    <string name="my_favorites">My Favourites</string>
    <string name="done">Done</string>
    <string name="choose_from_gallery">Gallery</string>
    <string name="choose_image_selection">Choose Image Selection</string>
    <string name="choose_from_camera">Camera</string>
    <string name="order_history">%s History</string>
    <string name="track_my_order">Track My %s</string>
    <string name="rate_my_order">Rate My %s</string>
    <string name="upcoming_order">Current %s</string>
    <string name="loyality_points">Loyality Points</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="_continue">Continue</string>
    <string name="sign_up">Signup</string>
    <string name="signup_otp_msg">We will be sending you an %s on your mobile number. Tap the button below after correctly typing your phone number.</string>
    <string name="send_otp">Send %s</string>
    <string name="recieve_otp">Didn`t receive your code?</string>
    <string name="resend_otp">Resend %s</string>
    <string name="submit">Submit</string>
    <string name="tap_to_add_profile_pic">Tap to add profile picture</string>
    <string name="finish">Finish</string>
    <string name="oreder_scheduler">%s Scheduler</string>
    <string name="order_details">%s Details</string>
    <string name="schedule_your_order">Schedule Your %s</string>
    <string name="delivered">Delivered</string>
    <string name="reorder">Reorder</string>
    <string name="cancel_order">Cancel %s</string>
    <string name="track">Track</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_digit_phone_number">Phone number</string>
    <string name="enter_otp">Enter %s</string>
    <string name="hint_full_name">Full name</string>
    <string name="action_okay">OK</string>
    <string name="empty_email">Please enter email id</string>
    <string name="empty_email_phone">Please enter email or phone number</string>
    <string name="invalid_email">Please enter valid email id</string>
    <string name="empty_pwd">Please enter password</string>
    <string name="empty_phone_number">Please enter phone number</string>
    <string name="empty_otp">Please enter %s</string>
    <string name="empty_fn">Please enter full name</string>
    <string name="payment_method">Payment Method</string>
    <string name="set_schedule">Set Schedule</string>
    <string name="select_category">Select Category</string>
    <string name="select_dates">Select Dates</string>
    <string name="internet_connection">Please check your internet connection.</string>
    <string name="login_expired">Sorry, your account has been logged in other device! Please login again to continue.</string>
    <string name="ok">OK</string>
    <string name="distance_not">Distance is no longer a problem.</string>
    <string name="guest">Guest</string>
    <string name="edit">Edit</string>
    <string name="qunatity">Quantity</string>
    <string name="net_total">Net Total</string>
    <string name="delivery">%s to</string>
    <string name="delivery_speed">Delivery Speed</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="handling_charges">Handling Charges</string>
    <string name="empty">Field Can\'t Be Empty</string>
    <string name="txtOrderDone">%s Done So Far</string>
    <string name="txtPaymentOptions">Payment Options</string>
    <string name="txtInbusiness">In Business Since</string>
    <string name="reviews">Reviews</string>
    <string name="go">Go</string>
    <string name="multi_serach">Multi search</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="max_limit_reached">Max. limit reached</string>
    <string name="multisercah">Multi Search</string>
    <string name="NoCart">No Items Found</string>
    <string name="favorites">Favourite</string>
    <string name="share_sub">%s User Mobile App</string>
    <string name="share_body">https://play.google.com/store/apps/details?id=%s</string>
    <string name="save">Save</string>
    <string name="cashOnDeli">Cash On Delivery</string>
    <string name="debitCreditCard">Debit/Credit Card</string>
    <string name="choosePaymentOption">Choose Payment Option</string>
    <string name="selectAdress">Please add Address.</string>
    <string name="order_summary">%s Summary</string>
    <string name="pickkup">Pickup</string>
    <string name="items">Items</string>
    <string name="net_payable">Net Payable</string>
    <string name="additional_remarks">Additional Remarks </string>
    <string name="place_order">Place %s</string>
    <string name="successFavourite">Added to favourite successfully.</string>
    <string name="successUnFavourite">Removed from favourite successfully.</string>
    <string name="success_wishlist">%s added to %s successfully.</string>
    <string name="update">Update!</string>
    <string name="cancel">Cancel</string>
    <string name="pointsEarnedSoFar">Points earned so far</string>
    <string name="change_password">Change Password</string>
    <string name="notification_lang">Notification Language</string>
    <string name="enterReview">Write your review</string>
    <string name="open">Open Now</string>
    <string name="filter">Filters</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_match_error">Password does not match</string>
    <string name="clearCart">Adding an item from a different %1$s will clear your cart. Are you sure you wish to %2$s?</string>
    <string name="Ok">OK</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
    <string name="close">Closed</string>
    <string name="cash">Cash</string>
    <string name="busy">Busy</string>
    <string name="logout">Logout</string>
    <string name="please_login">Please Login</string>
    <string name="order_no">%s No.</string>
    <string name="placed_on">Placed On</string>
    <string name="delivered_on">Delivered On</string>
    <string name="expected_delivered_on">Expected %s On</string>
    <string name="points">Points</string>
    <string name="passwrd_lenght">Password length must be at least 6 characters long.</string>
    <string name="no_internet_connection_found">No internet connection found</string>
    <string name="retry">Retry</string>
    <string name="pending">Pending</string>
    <string name="confirmed">Confirmed</string>
    <string name="reject">Reject</string>
    <string name="reached">Reached</string>
    <string name="doYouCancel">Do you really want to cancel this %s?</string>
    <string name="date_time_msg">Please select pickup date and time</string>
    <string name="rate_">Rate</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="nothing_found">Nothing found!</string>
    <string name="results_for">Results For </string>
    <string name="skip">Skip</string>
    <string name="success">Success</string>
    <string name="succesfully_scheduled">Your order has been scheduled successfully.</string>
    <string name="succesfully_order">Your %s has been placed successfully.</string>
    <string name="no_order_found">No %s found!</string>
    <string name="no_fav_found">No favourite found!</string>
    <string name="success_logout">You have successfully logout.</string>
    <string name="status">Status</string>
    <string name="payment">Payment</string>
    <string name="total_amount">Total Amount</string>
    <string name="placed">Placed</string>
    <string name="near_you">Near You</string>
    <string name="minimum_order">Minimum %s</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="payment_options">Payment Options</string>
    <string name="desc">About %s</string>
    <string name="review">Reviews</string>
    <string name="about">Uniqueness</string>
    <string name="total">Total</string>
    <string name="sub_total">Sub Total</string>
    <string name="type_here">Type Here</string>
    <string name="new_tag">New</string>
    <string name="action_send">Send</string>
    <string name="others">Others</string>
    <string name="just_now">Just Now</string>
    <string name="a_min_ago">a Minute Ago</string>
    <string name="min_ago">Minute Ago</string>
    <string name="a_hour_ago">an Hour Ago</string>
    <string name="hour_ago">Hour Ago</string>
    <string name="yest">Yesterday</string>
    <string name="days_afo">Days Ago</string>
    <string name="days">Days</string>
    <string name="forgot_password1">Forgot Password</string>
    <string name="log_out_msg">Are you sure you want to logout?</string>
    <string name="view_all">View All</string>
    <string name="select_country">Select Country</string>
    <string name="pick_uptime">Select Date and Time</string>
    <string name="supplier_name">%s:</string>
    <string name="isMonthlyErrorMsg">Please select scheduling monthly dates.</string>
    <string name="min_order_time">Min. Delivery Time</string>
    <string name="hour">Hour</string>
    <string name="hours">Hours</string>
    <string name="min">Minutes</string>
    <string name="day">Day</string>
    <string name="compareProduct">Compare %s</string>
    <string name="results">Results</string>
    <string name="add">Add</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="categories">Categories</string>
    <string name="title_home">Home</string>
    <string name="orders">Orders</string>
    <string name="share_app">Share App</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="back">Back</string>
    <string name="area_to_focus_on">Area to focus on</string>
    <string name="areas_to_focus">Areas to focus</string>
    <string name="have_pets">Have pets</string>
    <string name="parking_instructions">Parking instructions</string>
    <string name="enter_parking_instruction">Enter parking instruction</string>
    <string name="will_someone_be_there_to_let_the_cleaner_in">Will someone be there to let the cleaner in?</string>
    <string name="defaultPaymentMethod">Default Payment Method</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="card_number">Card Number*</string>
    <string name="personaldetails">Personal Details</string>
    <string name="expires">Expires</string>
    <string name="addDebCreCard">Add Credit/Debit Card</string>
    <string name="youWillText">You will not be charged until you make a purchase</string>
    <string name="add_new_card">Add New Card</string>
    <string name="cvv">CVV*</string>
    <string name="posts">Posts</string>
    <string name="profile">Profile</string>
    <string name="terms_conditions">Terms and Conditions.</string>
</resources>