<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_categories"
        android:icon="@drawable/ic_menu"
        android:title="@string/categories" />
    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart" />
    <item
        android:id="@+id/nav_orders"
        android:icon="@drawable/ic_orders"
        android:title="@string/orders" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
    <item
        android:id="@+id/nav_share_app"
        android:icon="@drawable/ic_share"
        android:title="@string/share_app" />
    <item
        android:id="@+id/nav_terms_condition"
        android:icon="@drawable/ic_tc"
        android:title="@string/terms_conditions" />
    <item
        android:id="@+id/nav_about_us"
        android:icon="@drawable/ic_info"
        android:title="@string/about_us" />
    <item
        android:id="@+id/nav_privacy_policy"
        android:icon="@drawable/ic_privacy"
        android:title="@string/privacy_policy" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_lg"
        android:title="@string/logout" />
  </group>
</menu>
