<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llContainer"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:background="@drawable/white_rec"
    android:clickable="true"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivCross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/value_16"
                app:srcCompat="@drawable/ic_cross"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/multi_serach"
                android:textColor="@color/light_text_color"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:id="@+id/tvGo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/value_16"
                android:text="@string/go"
                android:textColor="@color/brown"
                android:textSize="@dimen/text_size_18" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/value_8"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rec_4_transparent"
            android:drawableStart="@drawable/ic_search_grey"
            android:hint="@string/what_are_you_looking_for"
            android:imeActionLabel="@string/done"
            android:imeOptions="actionSend"
            android:maxLength="15"
            android:maxLines="1"
            android:padding="@dimen/value_12"
            android:singleLine="true"
            android:textColor="@color/light_text_color"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/tvAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/value_4"
            android:background="@drawable/back_rec_theme_color_solid"
            android:gravity="center"
            android:paddingStart="@dimen/value_16"
            android:paddingTop="@dimen/value_8"
            android:paddingEnd="@dimen/value_16"
            android:paddingBottom="@dimen/value_8"
            android:text="@string/add"
            android:textColor="@color/white" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ScrollView>
</LinearLayout>
